.provarCaches/00D5f000005vwGkEAI/objects/rstkf__arapplic__c.object
<CustomObject>
    <description>arapplic__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_amtbank__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transaction Amount - Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_amthome__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transaction Amount - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_amtmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transaction Amount - AR Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_amtpay__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transaction Amount - Payment Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_approver__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Write-Off/Write-Up Approver</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>Receivable Application Transactions</relationshipLabel>
        <relationshipName>arapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_arapplic_applied__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>The AR Txn Being Applied</label>
        <referenceTo>rstkf__arapplic__c</referenceTo>
        <relationshipLabel>Receivable Application Transactions (The A/R Txn Being Applied)</relationshipLabel>
        <relationshipName>arapplics01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_arapplic_rev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Transaction Reversed Here</label>
        <referenceTo>rstkf__arapplic__c</referenceTo>
        <relationshipLabel>Receivable Application Transactions</relationshipLabel>
        <relationshipName>arapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_arcashd__c</fullName>
        <label>Payment Transaction</label>
        <referenceTo>rstkf__arcashd__c</referenceTo>
        <relationshipLabel>Receivable Application Transactions</relationshipLabel>
        <relationshipName>arapplics</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_arcrbank__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AR Credit Amount - Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_arcrhome__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AR Credit Amount - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_arcrmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AR Credit Amount - AR Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_arcrpay__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AR Credit Amount - Payment Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_ardrbank__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AR Debit Amount - Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_ardrhome__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AR Debit Amount - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_ardrmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AR Debit Amount - AR Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_ardrpay__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AR Debit Amount - Payment Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_arinvdue__c</fullName>
        <label>Receivable Transaction Scheduled Payment</label>
        <referenceTo>rstkf__arinvdue__c</referenceTo>
        <relationshipLabel>Receivable Application Transactions</relationshipLabel>
        <relationshipName>arapplics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_arinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Receivable Transaction</label>
        <referenceTo>rstkf__arinvtxn__c</referenceTo>
        <relationshipLabel>Receivable Application Transactions</relationshipLabel>
        <relationshipName>arapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_bankdate__c</fullName>
        <label>Bank-Supplied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_bankhomeexchrate__c</fullName>
        <label>Rate of Exchange (Bank to Home)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_banktohomesyforexschedno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>arapplic_banktohomesyforexschedno__c</description>
        <label>Exchange Rate Schedule (Bank to Home)</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Receivable Application Transactions</relationshipLabel>
        <relationshipName>arapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_cashcrbank__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash Credit Amount - Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_cashcrhome__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash Credit Amount - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_cashcrmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash Credit Amount - AR Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_cashcrpay__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash Credit Amount - Payment Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_cashdrbank__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash Debit Amount - Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_cashdrhome__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash Debit Amount - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_cashdrmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash Debit Amount - AR Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_cashdrpay__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash Debit Amount - Payment Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_ccsohdr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Order Paid by Credit Card</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>Receivable Application Transactions</relationshipLabel>
        <relationshipName>arapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_comment__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_custdate__c</fullName>
        <label>Customer-Supplied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_destglbanktxn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bank Reconciliation Record</label>
        <referenceTo>rstkf__glbanktxn__c</referenceTo>
        <relationshipLabel>Receivable Application Transactions (Bank Reconciliation Record)</relationshipLabel>
        <relationshipName>arapplics01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_glyear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>Receivable Application Transactions</relationshipLabel>
        <relationshipName>arapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_invcust__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Receivable Application Transactions</relationshipLabel>
        <relationshipName>arapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_invcustcmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer – Company</label>
        <referenceTo>rstkf__socustcmpno__c</referenceTo>
        <relationshipLabel>Receivable Application Transactions</relationshipLabel>
        <relationshipName>arapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_isvariance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currency Variance Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_nogainlosspost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Gain/Loss From This Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_nogainlossreason__c</fullName>
        <label>No Gain/Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Single Currency Record</fullName>
                </value>
                <value>
                    <fullName>Company Policy</fullName>
                </value>
                <value>
                    <fullName>No Variance</fullName>
                </value>
                <value>
                    <fullName>CR Side Of AR Application</fullName>
                </value>
                <value>
                    <fullName>CR Side Of A/R Application</fullName>
                    <isActive>false</isActive>
                    <label>CR Side Of A/R Application</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_nopost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No GL Postings From This Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_nopostreason__c</fullName>
        <label>No GL Posting Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Cr Side Of AR Application</fullName>
                </value>
                <value>
                    <fullName>AR Application Within One Control Account</fullName>
                </value>
                <value>
                    <fullName>A/R Application Within One Control Account</fullName>
                    <isActive>false</isActive>
                    <label>A/R Application Within One Control Account</label>
                </value>
                <value>
                    <fullName>Cr Side Of A/R Application</fullName>
                    <isActive>false</isActive>
                    <label>Cr Side Of A/R Application</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_orig_rev__c</fullName>
        <label>Original or Reversed Transaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                    <default>true</default>
                    <label>Original</label>
                </value>
                <value>
                    <fullName>Reversal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_paycurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payment Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Receivable Application Transactions</relationshipLabel>
        <relationshipName>arapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_payhomeexchrate__c</fullName>
        <label>Rate of Exchange (Pay to Home)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_paytohomesyforexschedno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>arapplic_paytohomesyforexschedno__c</description>
        <label>Exchange Rate Schedule (Pay to Home)</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Receivable Application Transactions (Exchange Rate Schedule (Pay to Home))</relationshipLabel>
        <relationshipName>arapplics1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_period__c</fullName>
        <label>Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_recordsource__c</fullName>
        <label>Record Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Receipts</fullName>
                </value>
                <value>
                    <fullName>Bank Reconciliation</fullName>
                </value>
                <value>
                    <fullName>Finance Charge DR Memo Reversal</fullName>
                </value>
                <value>
                    <fullName>Non-Cash Transfers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_refarapplic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ref Receivable Application Transaction</label>
        <referenceTo>rstkf__arapplic__c</referenceTo>
        <relationshipLabel>Receivable Application Transactions (Receivable Application Transaction)</relationshipLabel>
        <relationshipName>refarapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_sohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Sales Order</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>Receivable Application Transactions (Reference Sales Order)</relationshipLabel>
        <relationshipName>arapplics2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_soinv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Invoice Header</label>
        <referenceTo>rstk__soinv__c</referenceTo>
        <relationshipLabel>Receivable Application Transactions</relationshipLabel>
        <relationshipName>arapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_sourceglbanktxn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bank-Generated Transaction</label>
        <referenceTo>rstkf__glbanktxn__c</referenceTo>
        <relationshipLabel>Receivable Application Transactions</relationshipLabel>
        <relationshipName>arapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_trandate__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_transeq__c</fullName>
        <label>Transaction Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_trantype__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check Payment</fullName>
                </value>
                <value>
                    <fullName>Cash Payment</fullName>
                </value>
                <value>
                    <fullName>CC Payment</fullName>
                </value>
                <value>
                    <fullName>Eft Payment</fullName>
                </value>
                <value>
                    <fullName>Bank Reported Payment</fullName>
                </value>
                <value>
                    <fullName>Discount Taken</fullName>
                </value>
                <value>
                    <fullName>Cash To GL</fullName>
                </value>
                <value>
                    <fullName>AR Item Applied</fullName>
                </value>
                <value>
                    <fullName>Unapplied Cash Txn Created</fullName>
                </value>
                <value>
                    <fullName>Write up</fullName>
                </value>
                <value>
                    <fullName>Write off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_unapplcashbank__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_unapplcashhome__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_unapplcashmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unapplied Cash Total - AR Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_unapplcashpay__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unapplied Cash Total - Payment Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arapplic_variance__c</fullName>
        <label>Variance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__arapplic_transeq__c</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__arapplic_arinvdue__r.rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_docno__c  &amp; &apos;-&apos; &amp;  rstkf__arapplic_arcashd__r.rstkf__arcashd_checkorref__c</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Receivable Application Transaction</label>
    <listViews>
        <fullName>rstkf__RS_Receivable_Appl_Transactions_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arapplic_invcust__c</columns>
        <columns>rstkf__arapplic_trantype__c</columns>
        <columns>rstkf__arapplic_trandate__c</columns>
        <columns>rstkf__arapplic_arcashd__c</columns>
        <columns>rstkf__arapplic_orig_rev__c</columns>
        <columns>rstkf__arapplic_paycurr__c</columns>
        <columns>rstkf__arapplic_recordsource__c</columns>
        <columns>rstkf__arapplic_amthome__c</columns>
        <columns>rstkf__arapplic_arcrhome__c</columns>
        <columns>rstkf__arapplic_ardrhome__c</columns>
        <columns>rstkf__arapplic_cashcrhome__c</columns>
        <columns>rstkf__arapplic_cashdrhome__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Receivable Appl Transactions - Filtered</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Receivable_Application_Transactions</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arapplic_invcust__c</columns>
        <columns>rstkf__arapplic_trantype__c</columns>
        <columns>rstkf__arapplic_trandate__c</columns>
        <columns>rstkf__arapplic_transeq__c</columns>
        <columns>rstkf__arapplic_arcashd__c</columns>
        <columns>rstkf__arapplic_recordsource__c</columns>
        <columns>rstkf__arapplic_paycurr__c</columns>
        <columns>rstkf__arapplic_amthome__c</columns>
        <columns>rstkf__arapplic_arcrhome__c</columns>
        <columns>rstkf__arapplic_ardrhome__c</columns>
        <columns>rstkf__arapplic_cashcrhome__c</columns>
        <columns>rstkf__arapplic_cashdrhome__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Receivable Application Transactions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__Receivable_Appl_Transactions_today</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arapplic_invcust__c</columns>
        <columns>rstkf__arapplic_trantype__c</columns>
        <columns>rstkf__arapplic_amthome__c</columns>
        <columns>rstkf__arapplic_ardrhome__c</columns>
        <columns>rstkf__arapplic_recordsource__c</columns>
        <columns>rstkf__arapplic_trandate__c</columns>
        <columns>rstkf__arapplic_arcashd__c</columns>
        <columns>rstkf__arapplic_orig_rev__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>rstkf__arapplic_paycurr__c</columns>
        <columns>rstkf__arapplic_arcrhome__c</columns>
        <columns>rstkf__arapplic_cashcrhome__c</columns>
        <columns>rstkf__arapplic_cashdrhome__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Receivable Appl Transactions - today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__Receivable_Application_Transaction</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arapplic_invcust__c</columns>
        <columns>rstkf__arapplic_trantype__c</columns>
        <columns>rstkf__arapplic_trandate__c</columns>
        <columns>rstkf__arapplic_recordsource__c</columns>
        <columns>rstkf__arapplic_amthome__c</columns>
        <columns>rstkf__arapplic_transeq__c</columns>
        <columns>rstkf__arapplic_arcashd__c</columns>
        <columns>rstkf__arapplic_paycurr__c</columns>
        <columns>rstkf__arapplic_arcrhome__c</columns>
        <columns>rstkf__arapplic_comment__c</columns>
        <columns>rstkf__arapplic_ardrmaint__c</columns>
        <columns>rstkf__arapplic_ardrhome__c</columns>
        <columns>rstkf__arapplic_arapplic_applied__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Receivable Application Transaction</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__test_view</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arapplic_invcust__c</columns>
        <columns>rstkf__arapplic_trantype__c</columns>
        <columns>rstkf__arapplic_trandate__c</columns>
        <columns>rstkf__arapplic_amthome__c</columns>
        <columns>rstkf__arapplic_transeq__c</columns>
        <columns>rstkf__arapplic_arcashd__c</columns>
        <columns>rstkf__arapplic_recordsource__c</columns>
        <columns>rstkf__arapplic_paycurr__c</columns>
        <columns>rstkf__arapplic_arcrhome__c</columns>
        <columns>rstkf__arapplic_ardrhome__c</columns>
        <columns>rstkf__arapplic_cashcrhome__c</columns>
        <columns>rstkf__arapplic_cashdrhome__c</columns>
        <columns>rstkf__arapplic_arapplic_applied__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__arapplic_arinvdue__c</field>
            <operation>equals</operation>
            <value>56(1)</value>
        </filters>
        <label>test view</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receivable Application Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>